# python-tool-competition-2024-unittestbot

./: .gitignore  README.md  pyproject.toml
python_tool_competition_2024_unittestbot/: check_usvm.py  generator.py
targets/: example4.py
