[tool.poetry]
name = "python-tool-competition-2024-unittestbot"
version = "0.1.0"
description = "Python Tool Competition 2024 implementation using UnitTestBot"
authors = ["Vyacheslav Tamarin, Ekaterina Tochilina <vyacheslav.tamarin@yandex.ru>"]
readme = "README.md"
packages = [{include = "python_tool_competition_2024_unittestbot"}]

[tool.poetry.dependencies]
python = "^3.9"
python-tool-competition-2024 = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."python_tool_competition_2024.test_generators"]
unittestbot = "python_tool_competition_2024_unittestbot.generator:UnittestbotTestGenerator"
