[tool.poetry]
name = "python-tool-competition-2024-unittestbot"
version = "0.1.0"
description = "Python Tool Competition 2024 implementation using UnitTestBot"
authors = ["Vyacheslav Tamarin, Ekaterina Tochilina <vyacheslav.tamarin@yandex.ru>"]
readme = "README.md"
packages = [{include = "python_tool_competition_2024_unittestbot"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-tool-competition-2024 = "^0.1.1"
utbot_dist = [
    { url = "https://github.com/tamarinvs19/python-tool-competition-2024-unittestbot/releases/download/v6/utbot_dist-0.1.0-py3-none-manylinux_2_31_x86_64.whl", platform = "linux" }
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."python_tool_competition_2024.test_generators"]
unittestbot = "python_tool_competition_2024_unittestbot.generator:UnittestbotTestGenerator"

[tool.poetry.scripts]
check = "python_tool_competition_2024_unittestbot.check_usvm:main"